--- a/css/main.css
+++ b/css/main.css
@@ -9,13 +9,22 @@
 #match-board span {
   display: block;
   float: left;
-  width: 15%;
+  width: 16.6%;
   height: 60px;
   border:  1px solid #000;
   text-align: center;
   font-size: 24px;
   line-height: 60px;
   cursor: pointer;
+  box-sizing: border-box;
+}
+
+#match-board.size-4x3 span {
+  width: 25%;
+}
+
+#match-board.size-8x5 span {
+  width: 12.5%;
 }
 
 #match-board span:hover,
